# pico2

./: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  download_resource.sh
api_types/: Cargo.toml
api_types/src/: lib.rs
circuit_board/: Cargo.toml
circuit_board/src/: lib.rs
doc/: glossary.typ
doc/model/: er.puml
pico2/src/: clock.rs  constants.rs  lib.rs  processor.rs  simulator.rs  sio.rs
pico2/src/processor/: core.rs  hazard3.rs  stats.rs
rp2350/: Cargo.toml
rp2350/src/: bus.rs  clock.rs  common.rs  constants.rs  error.rs  gpio.rs  inspector.rs  interrupts.rs  lib.rs  memory.rs  peripherals.rs  processor.rs  rp2350.rs  rp2350core.rs  simulator.rs  sio.rs  utils.rs
rp2350/src/clock/: event.rs  tick.rs
rp2350/src/gpio/: drive_strength.rs  function_select.rs  override.rs  pin.rs  state.rs
rp2350/src/peripherals/: bootram.rs  busctrl.rs  clocks.rs  dma.rs  i2c.rs  io.rs  otp.rs  pads.rs  pads_bank0.rs  pll.rs  powman.rs  pwm.rs  reset.rs  sha256.rs  sio.rs  ticks.rs  timer.rs  trng.rs  uart.rs  (+2 more)
server/: Cargo.toml  config.toml
server/assets/: CMakeLists.txt
server/src/: compile.rs  config.rs  main.rs
src/: memory.rs  peripherals.rs  simulator.rs
src/processor/: cortex_m33.rs  hazard3.rs
src/sio/: doorbell.rs  gpio.rs  interpolator.rs  spinlock.rs  timer.rs  tmds.rs
uf2/: Cargo.toml  test.uf2
uf2/src/: lib.rs
web/: Cargo.toml  index.html
web/.cargo/: config.toml
web/assets/: arm-bootrom.dis  riscv-bootrom.dis  sw.js
web/src/: api.rs  app.rs  lib.rs  main.rs  notify.rs  simulator.rs  tracker.rs  widgets.rs
(+54 files in other folders)
