[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3" # For async streams
config = { version = "0.15" }
nanoid = "0.4"
thiserror = "2"
anyhow = "1"
log = "0.4"
